test-data/invalid/translate-invalid-child-element.jsx
const Test = () => (
    <Translate>
        <span />
    </Translate>
);
